# spinal_curvature_estimation

./: .gitignore  LICENSE  README.md  pyproject.toml
convolutional_neural_network/core/: cnn_data.py  model.py  post_processing.py  training.py  transfer_utils.py
convolutional_neural_network/esl/: fine_tuning.py  silver_training.py
convolutional_neural_network/esl/config/: base_config.py  silver_config.py  transfer_config.py
convolutional_neural_network/esl/evaluation/: combined_ply_generation_from_json.py  predicted_line_and_3d_coordinates.py
convolutional_neural_network/isl/: fine_tuning.py  silver_training.py
convolutional_neural_network/isl/config/: base_config.py  silver_config.py  transfer_config.py
convolutional_neural_network/isl/evaluation/: combined_ply_generation_from_json.py  predicted_line_and_3d_coordinates.py
point_transformer/: silver_training.py
point_transformer/config/: silver_config.py  transfer_config.py
point_transformer/core/: pt_data.py  training.py
point_transformer/core/model/: model.py  point_transformer_v3.py
point_transformer/core/model/modules/: attention.py  layers.py  pooling.py
point_transformer/core/model/utils/: structure.py
point_transformer/evaluation/: 3d_coordinates.py  combined_ply_generation_from_json.py
